# timeclock

./: .gitignore  .pre-commit-config.yaml  .vimrc  .vimspector.json  README.md  dev-requirements.txt  pyproject.toml
src/timeclock/: __init__.py  main.py  py.typed  timeclock.py
tests/: __init__.py  conftest.py  test_timeclock.py
timeclocks/: example_client.py
