[project]
name = "timeclock"
version = "0.1.0"
description = "A script to keep track of cumulative time worked daily."
authors = [{ name = "Shay Hill", email = "shay_public@hotmail.com" }]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9,<3.14"
dependencies = []

[project.optional-dependencies]
dev = ["commitizen", "pre-commit", "pytest", "tox"]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"


[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "$version"
major-version-zero = true
version_files = ["pyproject.toml:^version"]


[tool.isort]
profile = "black"


[tool.pytest.ini_options]
addopts = "--doctest-modules"
pythonpath = ["tests"]
log_cli = 1

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py{39,310,311,312,313}

[testenv]
deps = pytest
commands = pytest
"""

[tool.ruff.lint.pydocstyle]
convention = "pep257"


[tool.pyright]
include = ["src"]
exclude = ["**/__pycache__.py"]

pythonVersion = "3.9"
pythonPlatform = "Any"

typeCheckingMode = "strict"
reportShadowedImports = true
reportCallInDefaultInitializer = true
reportImplicitStringConcatenation = true
# reportMissingSuperCall = true
reportPropertyTypeMismatch = true
reportUninitializedInstanceVariable = true
reportUnnecessaryTypeIgnoreComment = true
reportUnusedCallResult = true

venvPath = "."
venv = "./venv"
